--- a/index.html
+++ b/index.html
@@ -11,44 +11,113 @@
 <html>
 
 <head>
-  <title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>味補鮮知-頭足類</title>
 </head>
 
 <body>
-  <div id="menu">
-    <div class="logo">Logo</div>
-    <div class="icon">
-      <span class="name">- 頭足類 -</span>
-      <img class="squid" src="https://raw.githubusercontent.com/87penginnouta/Cfood_secret/754f60912f06ff2f3875ead7458d5a5492782e60/squid.svg" alt="">
-    </div>
-    <div id="bar">
 
-      <div class="btn b1">文蛤</div>
-      <div class="btn b2">牡蠣</div>
-      <div class="btn b3">蜆</div>
-      <div class="btn b4">海瓜子</div>
-      <div class="btn b5">孔雀蛤</div>
-      <div class="btn b6">扇貝</div>
-    </div>
-    <div class="menu_btn"></div>
+  <link href="https://unpkg.com/aos@2.3.1/dist/
+aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist
+/aos.js"></script>
+  
+  <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 452.36 210.76">
+    <defs>
+      <style>
+        .a {
+          fill: #f0ebd8;
+        }
+
+        .b {
+          fill: #8ea2b1;
+        }
+      </style>
+    </defs>
+    <title>logo</title>
+    <path class="a" d="M157.3,196.1V133.34h27.36V196.1Zm9.48-53.28v43.8h8.4v-43.8ZM251,207.26H240l-15.72-25.44v36.12h-9.48V182.06l-15.12,25.2H188.5l23-38.28H189.7V159.5h25.08V145.94H194.86v-9.48h19.92v-11h9.48v11h21.12v9.48H224.25V159.5h26.16V169H227.49Z" transform="translate(-157 -123.26)" />
+    <path class="a" d="M300.34,164.66h9.48l-5.64,12.12,3.72,6.6h-9.6l-2.76-4.44V219h-8.4l-.24-31.68-3.48,9.12h-9.24L293,147.26H276.1v-8.52h10V123.26h8.52v15.48h10.8L296,163.34l2.76,4.56Zm71-17.88h-25v6.84h22.68V218.9h-8.16V198.74H346.41V215.3h-8.64V198.74h-14.4V218.9h-8.16V153.62h22.56v-6.84H313.42V138h24.36V123.5h8.64V138h25ZM337.77,162h-14.4v9.48h14.4Zm-14.4,28h14.4v-9.72h-14.4Zm37.56-28H346.41v9.48h14.52Zm-14.52,28h14.52v-9.72H346.41Zm22.08-55.32h-10.2L353.13,126h10.08Z" transform="translate(-157 -123.26)" />
+    <path class="a" d="M399.7,309.3V271.38H393l12.6-31.2h25.08l-7.2,18.6h12.6V309.3Zm-4,24.24,2-20.28h7.92l-2,20.28Zm22.68-84.84h-7l-4.32,10.08h7.32Zm-4.68,18.84h-5.16V279.9h5.16Zm-5.16,20.64v12.36h5.16V288.18Zm.72,25.08h7.92l.24,17h-7.92Zm19.32,0,.84,14.52h-7.92l-.84-14.52Zm-1.44-33.36V267.54h-5V279.9Zm-5,20.64h5V288.18h-5Zm10.2,12.72h7.92l1.32,11.28h-7.92Zm59.88-11.4v9h-19.8V334h-9V310.86h-19.8v-9h19.8v-14.4h-15.6v-9h15.6V264.18H444.58v-9h27l4.44-15h9.84l-4.44,15h9.84v9H472.41v14.28H488v9h-15.6v14.4Zm-29.88-50.4h-10l-3.72-11.28h10Z" transform="translate(-157 -123.26)" />
+    <path class="a" d="M562.9,290H548.38l14.76,31H552.58l-10.44-22-11,32.28H520.9L535.18,290h-16v-9.6h17.52V262.14h-8l-3.6,12.12h-9.84L525,240.54h10.08l-3.6,12.12h29.16v9.48h-14.4v18.24H562.9Zm6.72-36.72H609V323.7H569.62Zm30.12,61.08V262.62H579.09v51.72Z" transform="translate(-157 -123.26)" />
+    <rect class="a" y="117.74" width="214" height="54" />
+    <path class="b" d="M173.84,253.56v3.08l-5.2-1.36v-3.08Zm0,8.68v3.08l-5.2-1.44v-3.12Zm-4.76,20.16,2.24-11.16h3.16l-2.32,11.16Zm12.84-29h17.88v3h-19l-1.2,3.4h-3.28l3.16-8.56h3.24Zm15.44,5.8-.68,7.88h2.84v3h-3.16l-.44,5.76h3v3h-3.32l-.36,4h-3l.32-4H178.72l1.16-8.72H177v-3h3.32l1-7.88ZM182.8,270l-.72,5.76h3.76l.6-5.76Zm1-8-.6,5h3.56l.48-5ZM193,275.8l.44-5.76h-3.92l-.64,5.76Zm.72-8.76.52-5h-3.84l-.52,5Z" transform="translate(-157 -123.26)" />
+    <path class="b" d="M209.36,274.4V261.76h-2.24l4.2-10.4h8.36l-2.4,6.2h4.2V274.4ZM208,282.48l.68-6.76h2.64l-.68,6.76Zm7.56-28.27h-2.32l-1.44,3.36h2.44ZM214,260.48h-1.72v4.12H214Zm-1.72,6.88v4.12H214v-4.12Zm.24,8.36h2.64l.08,5.68h-2.64Zm6.44,0,.28,4.84h-2.64l-.28-4.84Zm-.48-11.12v-4.12h-1.68v4.12Zm-1.68,6.88h1.68v-4.12h-1.68Zm3.4,4.24h2.64l.44,3.76h-2.64Zm20-3.8v3h-6.6v7.72h-3v-7.72H224v-3h6.6v-4.8h-5.2v-3h5.2v-4.76h-6.28v-3h9l1.48-5h3.28l-1.48,5h3.28v3H233.6v4.76h5.2v3h-5.2v4.8Zm-10-16.8h-3.32l-1.24-3.76H229Z" transform="translate(-157 -123.26)" />
+    <path class="b" d="M255.64,252.33l-.92,3.28h5.36v21.92H249.24V255.6h2.44l.92-3.28Zm1.64,12.08v-6.08H252v6.08ZM252,274.76h5.32v-7.2H252ZM267,255h12.12l-1.24,15.88,0,.2-3.16,11.08h-3.28l3.36-11.84.92-12.12h-9.44L265,263.6h-3.24l2.88-12.08h3.2Zm3.08,8.32,2,6.88H268.8l-2-6.88Z" transform="translate(-157 -123.26)" />
+    <path class="b" d="M299,262.36h-2.32l2.68,7.16h-3l-1.12-3.08,0,16.36h-2.72l0-13.68-1.6,5.68h-3l3.24-12.44H288v-3h4.52v-4l-4.08.52v-3l10-1.32v2.92l-3.24.48v4.36H299Zm9.44,9.44V279H318v3H305.4v-4.64l-2.16,4h-3.48l5.64-10.32V258.64h3v6.8l5.16-9.56h3.48Zm-5-6.8-.68,10.08h-2.84l.72-10.08Zm7.08-11.76v3.44l-5.16-1.8v-3.48Zm6,22.64-1.76-11.12h3l1.76,11.12Z" transform="translate(-157 -123.26)" />
+    <path class="b" d="M333.52,261.56l-2,5.48h-3.4l2-5.48Zm-1.16-5.32V259H329.2v-5.88h13.2v-2.28h3.2v2.28h13.2V259h-3.16v-2.72H343.08l1.64.68v3.4l-5.88-2.24v-1.84Zm21,14.16h-17.4l-4.92,3v-3.76l5-3v-7.56h3.16v5.68l12-7.28v3.68l-9.92,6h12.12Zm-.4,9.44v-5.08h3.2V283H331.88v-8.28h3.2v5.08h7.32v-7.52h3.2v7.52Zm1.28-16.72h3.36l1.56,4.64h-3.36Z" transform="translate(-157 -123.26)" />
+    <path class="a" d="M534.64,189.81c-5.5,13.51-32.83,5.62-53.67-12.2-2.38-2,8.2-7.34,6-9.62-2.93-3.08-18.5-3.22-20.87-6.67q-1.32-1.93-2.5-3.92c-11.85-20.14-38-36.41-57-24.41-17.12,10.81-18.28,31.72-2,53a58.89,58.89,0,0,0,10.68,10.66c2.13,1.66,4.32,19.89,6.68,21.34,2.86,1.75,5.93-13.35,9.07-11.89,22,10.18,50.48,13.38,75.56,12.18,27-1.29,31-17.68,34-20.62,8.75-8.6,21,2,30.74-2.59,7.35-3.5,3.93-11.56-2-14.3-2.34-1.07-6.89-.72-8-3.45s-.92-6.13-2-9a5.61,5.61,0,0,0-8.87-2.66C543,171.38,538.12,181.25,534.64,189.81Z" transform="translate(-157 -123.26)" />
+    <path class="a" d="M555.66,154.72c-6.38-13.9-.33-29.41,4.82-25.73S555.66,154.72,555.66,154.72Z" transform="translate(-157 -123.26)" />
+    <path class="a" d="M573.32,157.32c7.05-17,15.15-23.57,20.05-16.94S573.32,157.32,573.32,157.32Z" transform="translate(-157 -123.26)" />
+    <path class="a" d="M582,173c10-7,23-14,27-6S582,173,582,173Z" transform="translate(-157 -123.26)" />
+  </svg>
+
+  <div class="head">
+    <div class="title_1">| 頭足類</div>
+    <div class="title_2">&emsp;你猜，我有幾隻腳可以旋轉你？</div>
   </div>
-  <div id="pic">
+
+  <div id="info">
+    <div class="water_wave"></div>
     <div class="water"></div>
+  </div>
+  <div id="foot"></div>
+  <div id="pic">
     <img src="https://raw.githubusercontent.com/87penginnouta/Cfood_secret/master/%E5%B0%8F%E5%8D%B7.png" alt="" class="i1">
-    <img src="https://raw.githubusercontent.com/87penginnouta/Cfood_secret/master/%E9%AD%B7%E9%AD%9A.png" alt="" class="i2">
-    <img src="https://raw.githubusercontent.com/87penginnouta/Cfood_secret/master/%E8%BB%9F%E7%B5%B2.png" alt="" class="i3">
-    <img src="https://raw.githubusercontent.com/87penginnouta/Cfood_secret/master/%E8%8A%B1%E6%9E%9D.png" alt="" class="i4">
-    <img src="https://raw.githubusercontent.com/87penginnouta/Cfood_secret/master/%E4%B8%AD%E5%8D%B7.png" alt="" class="i5">
-    <img src="https://raw.githubusercontent.com/87penginnouta/Cfood_secret/master/%E7%AB%A0%E9%AD%9A.png" alt="" class="i6">
+    <img src="https://raw.githubusercontent.com/87penginnouta/Cfood_secret/master/%E7%AB%A0%E9%AD%9A.png" alt="" class="i2">
+    <img src="https://raw.githubusercontent.com/87penginnouta/Cfood_secret/master/%E9%AD%B7%E9%AD%9A.png" alt="" class="i3">
+    <img src="https://raw.githubusercontent.com/87penginnouta/Cfood_secret/master/%E8%BB%9F%E7%B5%B2.png" alt="" class="i4">
+    <img src="https://raw.githubusercontent.com/87penginnouta/Cfood_secret/master/%E8%8A%B1%E6%9E%9D.png" alt="" class="i5">
+    <img src="https://raw.githubusercontent.com/87penginnouta/Cfood_secret/master/%E4%B8%AD%E5%8D%B7.png" alt="" class="i6">
   </div>
   
-  <div id="info">| 頭足類</div>
-  <div id="info2">頭足類該如何挑選呢？</div>
-  <div id="info3"></div>
+  
+
+  <div id="menu">
+    <div class="icon">
+      <div class="name">-頭足類-</div>
+      <svg class="animal" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 401">
+        <defs>
+          <style>
+            .d {
+              fill: #8ea2b1;
+            }
+          </style>
+        </defs>
+        <title>squid</title>
+        <path class="d" d="M146.35,118.34a274.39,274.39,0,0,0-3.17,72.3,180.2,180.2,0,0,0,114.64,0,274.39,274.39,0,0,0-3.17-72.3C267.43,105.68,280.5,90.23,280.5,80c0-20-80-80-80-80s-80,60-80,80C120.5,90.23,133.57,105.68,146.35,118.34Z" transform="translate(-100.5)" />
+        <path class="d" d="M275.5,330a20,20,0,0,1-20-20V212.31a200.48,200.48,0,0,1-110,0V310a20,20,0,0,1-20,20h-25v30h25a50.06,50.06,0,0,0,45-28.22V351a20,20,0,0,1-20,20v30a50.06,50.06,0,0,0,50-50,50.06,50.06,0,0,0,50,50V371a20,20,0,0,1-20-20V331.78a50.06,50.06,0,0,0,45,28.22h25V330Zm-100-70a10,10,0,1,1,10-10A10,10,0,0,1,175.5,260Zm50,0a10,10,0,1,1,10-10A10,10,0,0,1,225.5,260Z" transform="translate(-100.5)" />
+      </svg>
+    </div>
+    <div id="bar">
+      <div class="btn b1">小卷</div>
+      <div class="btn b2">魷魚</div>
+      <div class="btn b3">軟絲</div>
+      <div class="btn b4">花枝</div>
+      <div class="btn b5">透抽</div>
+      <div class="btn b6">章魚</div>
+    </div>
+    <div class="menu_btn">
+      <svg class="btn_m" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 69.54 91.76">
+        <defs>
+          <style>
+            .c {
+              fill: #f0ebd8;
+            }
+          </style>
+        </defs>
+        <title>btn1</title>
+        <path class="c" d="M36.7,7.45,60.2,48.32c3.21,5.58,11.85.55,8.63-5L45.34,2.45c-3.21-5.58-11.85-.55-8.63,5Z" transform="translate(0 -0.02)" />
+        <path class="c" d="M45.34,89.35l23.5-40.9c3.21-5.59-5.42-10.63-8.63-5L36.71,84.32c-3.21,5.59,5.42,10.63,8.63,5Z" transform="translate(0 -0.02)" />
+        <path class="c" d="M.7,7.45,24.2,48.32c3.21,5.58,11.85.55,8.63-5L9.34,2.45C6.13-3.13-2.51,1.9.71,7.45Z" transform="translate(0 -0.02)" />
+        <path class="c" d="M9.34,89.35l23.5-40.9c3.21-5.59-5.42-10.63-8.63-5L.71,84.32c-3.21,5.59,5.42,10.63,8.63,5Z" transform="translate(0 -0.02)" />
+      </svg>
+    </div>
+  </div>
 </body>
 
 </html>
 <!-- partial -->
-  
+  <script  src="./script.js"></script>
+
 </body>
 </html>
