--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - fisherman [WIP]</title>
+  <title>味補鮮知-頭足類</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
