--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <p class="copyright">© 嘉義大學數位系110級畢業專題 味補鮮知 - 海鮮的秘密</p>
       <div class="sns_content s_footer">
         <a class="sns_btn s_fb" href="https://www.facebook.com/Cfood.secret" target="_blank">
-          <img class="btn_img" src="https://www.flaticon.com/svg/static/icons/svg/20/20837.svg" alt="味補鮮知_facebook">
+          <img class="btn_img" src="./img/facebook.svg" alt="味補鮮知_facebook">
         </a>
         <a class="sns_btn s_ig" href="https://www.instagram.com/fishkw.2020/" target="_blank">
-          <img class="btn_img" src="https://www.flaticon.com/svg/static/icons/svg/1384/1384031.svg"
+          <img class="btn_img" src="./img/ins.svg"
             alt="味補鮮知_instagram">
         </a>
       </div>
@@ -68,9 +68,7 @@
         開心地向媽媽分享：「你知道嗎？其實——」
       </div>
       <div id="godown_content">
-        <div class="godown">
-          <img class="btn_img down" src="https://www.flaticon.com/svg/static/icons/svg/72/72436.svg" alt="味補鮮知">
-        </div>
+          <img class="btn_img down" src="./img/down.svg" alt="味補鮮知">
       </div>
     </div>
 
@@ -187,7 +185,7 @@
 
   <div id="buttons_all">
     <a id="gotop" href="#">
-      <img class="btn_img" src="https://www.flaticon.com/svg/static/icons/svg/72/72436.svg" alt="味補鮮知_頁首">
+      <img class="btn_img" src="./img/up.svg" alt="味補鮮知_頁首">
     </a>
   </div>
 
@@ -230,10 +228,10 @@
       </div>
       <div class="sns_content s_menu">
         <a class="sns_btn s_fb" href="https://www.facebook.com/Cfood.secret" target="_blank">
-          <img class="btn_img" src="https://www.flaticon.com/svg/static/icons/svg/20/20837.svg" alt="味補鮮知_facebook">
+          <img class="btn_img" src="./img/facebook.svg" alt="味補鮮知_facebook">
         </a>
         <a class="sns_btn s_ig" href="https://www.instagram.com/fishkw.2020/" target="_blank">
-          <img class="btn_img" src="https://www.flaticon.com/svg/static/icons/svg/1384/1384031.svg"
+          <img class="btn_img" src="./img/ins.svg"
             alt="味補鮮知_instagram">
         </a>
       </div>
