--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
         並帶著滿滿的的各式魚蝦回到家門前，<br>
         開心地向媽媽分享：「你知道嗎？其實——」
       </div>
-      <div id="godown_content">
-          <img class="btn_img down" src="./img/down.svg" alt="味補鮮知">
-      </div>
+      <div id="godown_content"></div>
     </div>
 
     <div id="section2">
