--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="味補鮮知">
   <meta property="og:image" content="./img/bg/og72.jpg" />
   <title>尾聲 | 味補鮮知</title>
-  <link rel="icon" href="./img/bg/favicon1.ico">
+  <link rel="icon" href="./img/bg/f.svg">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Monda&amp;family=Noto+Sans+TC&amp;display=swap">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./rwd.css">
@@ -52,7 +52,7 @@
 
   <div id="bg">
     <div id="section1">
-      <img class="ending_bg" src="./img/bg/ending.jpg" alt="味補鮮知_尾聲">
+      <img class="ending_bg" src="./img/bg/ending.jpg" alt="蔚蔚學到不少關於海鮮的小知識，並帶著滿滿的的各式魚蝦回到家門前">
       <h1 class="open_content ep" data-aos="fade-left" data-aos-duration="1500" data-aos-easing="ease-in-back"
         data-aos-delay="1400" data-aos-offset="0">
         經過一場奇幻旅途，<br>
@@ -90,11 +90,11 @@
       </div>
       <div class="web" data-aos="fade-up">
         <div class="web_card">
-          <img class="web_img" src="./img/web/stamp.jpg" alt="">
+          <img class="web_img" src="./img/web/stamp.jpg" alt="貼圖_鮮不說了ㄅㄅ">
           <a class="w_link" href="https://store.line.me/stickershop/product/13630690/zh-Hant">READ MORE</a>
         </div>
         <div class="web_card">
-          <img class="web_img" src="./img/web/game.jpg" alt="">
+          <img class="web_img" src="./img/web/game.jpg" alt="遊戲_鮮之塔的食客">
           <a class="w_link" href="https://www.facebook.com/Cfood.secret/posts/pfbid02E6S4mD9YA5PuSyvShsu6v9R3jPMYwnAqKqKBfNPmMLX97J1fZpq4q3LdeeUt7VJnl">READ MORE</a>
         </div>
       </div>
