--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
   <div id="buttons_all">
     <a id="gotop" href="#">
-      <img class="btn_img" src="./img/up.svg" alt="味補鮮知_頁首">
+      <img class="btn_img" src="./img/up.svg" alt="回到上方">
     </a>
   </div>
 
