--- a/index.html
+++ b/index.html
@@ -14,6 +14,55 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./rwd.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
+  <!-- 由 Google 結構化資料標記協助工具產生的 JSON-LD 標記。 -->
+  <script type="application/ld+json">
+  [
+    {
+      "@context": "http://schema.org",
+      "@type": "Article",
+      "name": "其實食魚",
+      "image": "https://87penginnouta.github.io/Cfood_epilogue/img/concept/1.jpg",
+      "articleBody": "【環境保育】</SPAN><BR/>響應慢魚運動，珍惜海洋資源。"
+    },
+    {
+      "@context": "http://schema.org",
+      "@type": "Article",
+      "name": "其實食魚",
+      "image": "https://87penginnouta.github.io/Cfood_epilogue/img/concept/2.jpg",
+      "articleBody": "【消費習慣】</SPAN><BR/>跟著四季海鮮指南，吃當地，買當季！"
+    },
+    {
+      "@context": "http://schema.org",
+      "@type": "Article",
+      "name": "其實食魚",
+      "image": "https://87penginnouta.github.io/Cfood_epilogue/img/concept/3.jpg",
+      "articleBody": "【食魚教育】</SPAN><BR/>挖掘食魚文化，認識產地及水產特色。"
+    },
+    {
+      "@context": "http://schema.org",
+      "@type": "Article",
+      "name": "究竟是誰製作了這個專題呢",
+      "author": [
+        {
+          "@type": "Person",
+          "name": "【葉子庭】 網頁程式、主視覺"
+        },
+        {
+          "@type": "Person",
+          "name": "【方宣】 網站與遊戲美術繪圖"
+        },
+        {
+          "@type": "Person",
+          "name": "【李珮瑜】 遊戲程式、貼圖繪製"
+        },
+        {
+          "@type": "Person",
+          "name": "【王佩瑜老師】 專題指導教授"
+        }
+      ]
+    }
+  ]
+  </script>
 </head>
 
 <body>
@@ -95,7 +144,9 @@
         </div>
         <div class="web_card">
           <img class="web_img" src="./img/web/game.jpg" alt="遊戲_鮮之塔的食客">
-          <a class="w_link" href="https://www.facebook.com/Cfood.secret/posts/pfbid02E6S4mD9YA5PuSyvShsu6v9R3jPMYwnAqKqKBfNPmMLX97J1fZpq4q3LdeeUt7VJnl">READ MORE</a>
+          <a class="w_link"
+            href="https://www.facebook.com/Cfood.secret/posts/pfbid02E6S4mD9YA5PuSyvShsu6v9R3jPMYwnAqKqKBfNPmMLX97J1fZpq4q3LdeeUt7VJnl">READ
+            MORE</a>
         </div>
       </div>
     </div>
