--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T7WT8PSS8Z"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-T7WT8PSS8Z');
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="經過一場奇幻旅途，蔚蔚學到不少關於海鮮的小知識，開心地向媽媽分享：「你知道嗎？其實——」。本網站為嘉義大學數位學習設計與管理學系110級畢業專題。">
